--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
       </div>
     </section>
 
+    <section id="video" class="container-fluid">
+      <div class="container">
+        <video src="./assets/video.MP4" controls></video>
+      </div>
+    </section>
+
     <section id="tokenomics" class="container-fluid">
       <div class="container">
         <div class="row justify-content-between align-items-center row-gap-5">
