--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
           </div>
           <div class="col-lg-6 order-2">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Asperiores pariatur eius officiis quos sequi maiores eligendi hic
-              explicabo beatae, quis eaque amet rem, accusantium animi nisi
-              cumque error ullam doloribus excepturi impedit! Voluptatum ea
-              sapiente maxime veniam excepturi possimus, aperiam nobis ratione a
-              est aliquam placeat quidem saepe quae ducimus.
+              Hold on to your hats, folks, because there's a new cryptocurrency
+              on the block - Mongoose Coin! This exciting new digital currency
+              is launching on the Ethereum blockchain's ERC-20 network and is
+              coming in hot with the same narrative as its predecessor, Mong
+              Coin, which has already made a splash in the crypto world with a
+              whopping market cap of 150 million dollars.
             </p>
           </div>
         </div>
@@ -77,12 +77,8 @@
           <div
             class="col-lg-6 d-flex flex-column gap-3 align-items-start order-2"
           >
-            <h1 class="title">tokenomics</h1>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora
-              nemo quidem dolor natus! Nihil commodi repellat eius quas
-              exercitationem eos, facere qui quia perspiciatis. Saepe?
-            </p>
+            <h1 class="title">0% Tax</h1>
+            <!-- <p>0% Tax</p> -->
             <a href="" class="btn">buy now</a>
 
             <div
